fix: change description text color and hr bg color

--- a/packages/amplication-client/src/Application/git/GitActions/ExistingConnectionsMenu.scss
+++ b/packages/amplication-client/src/Application/git/GitActions/ExistingConnectionsMenu.scss
@@ -14,7 +14,7 @@ hr {
     margin-left: 0 !important;
   }
   &__hr {
-    background-color: var(--menu-background-color);
+    background-color: var(--black2);
     border-bottom: none;
     width: 100%;
     display: flex;
