--- a/packages/amplication-client/src/Application/git/SyncWithGithubPage.scss
+++ b/packages/amplication-client/src/Application/git/SyncWithGithubPage.scss
@@ -16,7 +16,7 @@ $icon-font-size: 40px;
 
   &__message {
     @include body1;
-    color: white !important;
+    color: var(--black);
     line-height: 1.5;
     margin-bottom: var(--default-spacing);
     max-width: $max-width;
