--- a/packages/amplication-client/src/style/light-css-variables.css
+++ b/packages/amplication-client/src/style/light-css-variables.css
@@ -65,4 +65,5 @@
   --diffViewerTitleBackground: var(--white);
   --diffViewerTitleColor: var(--black100);
   --diffViewerTitleBorderColor: var(--white);
+  --screenResolutionMessageColor: var(--white);
 }
