fix:(client) search field is too big in the commit screen

--- a/packages/amplication-client/src/VersionControl/CommitList.scss
+++ b/packages/amplication-client/src/VersionControl/CommitList.scss
@@ -6,7 +6,7 @@
     margin-bottom: var(--large-spacing);
 
     .search-field {
-      flex: 1;
+      width: var(--form-field-long);
     }
   }
   &__title {
