fix: dropdown padding and align chevron icon, text and avatar

--- a/packages/amplication-client/src/Application/git/GitActions/GitOrganizationMenuItemContent.scss
+++ b/packages/amplication-client/src/Application/git/GitActions/GitOrganizationMenuItemContent.scss
@@ -1,7 +1,12 @@
 .menu-item-content {
-  width: 24px;
-  height: 24px;
-  margin-right: 8px;
-  vertical-align: middle;
-  border-radius: 50%;
+  img {
+    width: 24px;
+    height: 24px;
+    margin-right: 8px;
+    vertical-align: middle;
+    border-radius: 50%;
+  }
+
+  display: flex;
+  align-items: center;
 }
