add the code editor component and css styling

--- a/packages/amplication-client/src/Application/code-view/CodeViewBar.scss
+++ b/packages/amplication-client/src/Application/code-view/CodeViewBar.scss
@@ -12,7 +12,7 @@
       @include title1;
       font-size: 14px;
       font-weight: 700;
-      margin: var(--default-spacing);
+      margin: 16px;
     }
   }
 }
