--- a/packages/amplication-client/src/Application/OverviewSecondaryTile/OverviewSecondaryTile.scss
+++ b/packages/amplication-client/src/Application/OverviewSecondaryTile/OverviewSecondaryTile.scss
@@ -1,8 +1,12 @@
 @import "../../style/index.scss";
 
+$overview-secondary-tile-min-height: 200px;
+$ribbon-width: 75px;
+$ribbon-height: 12px;
+
 .overview-secondary-tile {
   padding: var(--large-spacing);
-  min-height: 200px;
+  min-height: $overview-secondary-tile-min-height;
   background-color: var(--black2);
   display: flex;
   flex-direction: column;
@@ -21,9 +25,7 @@
     margin-bottom: var(--default-spacing);
 
     &__title {
-      font-weight: 500;
-      font-size: 14px;
-      line-height: 22px;
+      @include body4;
       margin-bottom: 0;
       margin-left: var(--default-spacing-small);
     }
@@ -46,8 +48,8 @@
   &__ribbon {
     position: absolute;
     right: -17px;
-    width: 75px;
-    height: 12px;
+    width: $ribbon-width;
+    height: $ribbon-height;
     background-color: var(--dark-purple);
     color: var(--static-white);
     transform: rotate(45deg);
