fix(client): removal of divider lines between buttons

--- a/packages/amplication-design-system/src/components/MultiStateToggle/MultiStateToggle.scss
+++ b/packages/amplication-design-system/src/components/MultiStateToggle/MultiStateToggle.scss
@@ -23,7 +23,7 @@
       height: var(--default-button-height);
       padding: 0;
       background-color: var(--black20);
-      border: $border-black10;
+      border: 0px solid var(--black20);
       outline: none;
       cursor: pointer;
 
