--- a/packages/amplication-client/src/Application/code-view/CodeViewBar.scss
+++ b/packages/amplication-client/src/Application/code-view/CodeViewBar.scss
@@ -1,18 +1,15 @@
 @import "../../style/index.scss";
 
 .code-view-bar {
-  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: stretch;
+  padding: var(--default-spacing);
 
   &__heading {
     h2 {
       @include title1;
-      font-size: 14px;
-      font-weight: 700;
-      margin: 16px;
     }
   }
 }
