CSS Variables updated

--- a/packages/amplication-design-system/src/style/css-variables.scss
+++ b/packages/amplication-design-system/src/style/css-variables.scss
@@ -83,12 +83,12 @@
   --header-spacing: 50px;
   --menu-width: var(--header-height);
   --menu-width-expanded: 230px;
-  --menu-item-width: 32px;
+  --menu-item-width: 24px;
   --menu-item-height: var(--menu-item-width);
   --menu-expand-animation-duration: 0.2s;
 
-  --menu-item-color: #b7bac7;
-  --menu-item-active-background: #373d57;
+  --menu-item-color: #a3a8b8;
+  --menu-item-active-background: #515873;
   --menu-item-active-color: #ffffff;
 
   --application-card-width: 390px;
