--- a/packages/amplication-client/src/Application/ApplicationDatabaseSettingsForms.scss
+++ b/packages/amplication-client/src/Application/ApplicationDatabaseSettingsForms.scss
@@ -1,5 +1,12 @@
 @import "../style/index.scss";
 
 .application-database-settings-form {
-  padding: var(--double-spacing);
+  padding: var(--default-spacing-small);
+  &__header {
+    @include flexFullRowWithSpacing;
+    margin-bottom: var(--large-spacing);
+    h3 {
+      margin: 0;
+    }
+  }
 }
