--- a/packages/amplication-client/src/Settings/ApiTokenList.scss
+++ b/packages/amplication-client/src/Settings/ApiTokenList.scss
@@ -6,11 +6,13 @@
     margin-bottom: var(--large-spacing);
     h3 {
       margin: 0;
+      @include title-18();
     }
   }
 
   &__message {
     margin-bottom: var(--double-spacing);
+    @include regular-14();
   }
 
   &__add-button {
