--- a/packages/amplication-client/src/Application/code-view/CodeViewBar.scss
+++ b/packages/amplication-client/src/Application/code-view/CodeViewBar.scss
@@ -15,4 +15,12 @@
   .build-selector {
     padding-bottom: var(--default-spacing);
   }
+
+  hr {
+    border: none;
+    border-top: $border-black10;
+    margin-top: var(--double-spacing);
+    margin-bottom: var(--double-spacing);
+    width: 100%;
+  }
 }
