--- a/packages/amplication-client/src/Components/BuildSelectorItem.scss
+++ b/packages/amplication-client/src/Components/BuildSelectorItem.scss
@@ -9,13 +9,14 @@
     font-size: 10px;
   }
   .title {
-    max-width: 160px;
+    max-width: 190px;
+    width: 190px;
     white-space: nowrap;
+    align-items: left;
     overflow: hidden;
     text-overflow: ellipsis;
     font-weight: 400;
     font-size: 14px;
-    padding-left: 12px;
   }
 
   .title-list {
