fix buildListItem style

--- a/packages/amplication-client/src/Components/BuildSelectorItem.scss
+++ b/packages/amplication-client/src/Components/BuildSelectorItem.scss
@@ -9,10 +9,10 @@
     font-size: 10px;
   }
   .title {
-    max-width: 190px;
-    width: 190px;
+    max-width: 185px;
+    width: 185px;
     white-space: nowrap;
-    align-items: left;
+    text-align: left;
     overflow: hidden;
     text-overflow: ellipsis;
     font-weight: 400;
