--- a/packages/amplication-client/src/Application/ResourceHome.scss
+++ b/packages/amplication-client/src/Application/ResourceHome.scss
@@ -7,7 +7,7 @@ $application-badge-size-large: 100px;
 $app-icon-large-font-size: 70px;
 $circle-badge-border: 2px;
 
-.application-home {
+.resource-home {
   width: 100%;
 
   &__header {
