--- a/packages/amplication-client/src/Workspaces/WorkspaceLayout.scss
+++ b/packages/amplication-client/src/Workspaces/WorkspaceLayout.scss
@@ -1,7 +1,7 @@
 @import "../style/index.scss";
 
 .workspaces-layout {
-  &__app-container {
+  &__resource-container {
     height: 100%;
     display: flex;
     flex-direction: column;
