--- a/packages/amplication-client/src/Workspaces/ResourceListItem.scss
+++ b/packages/amplication-client/src/Workspaces/ResourceListItem.scss
@@ -1,6 +1,6 @@
 @import "../style/index.scss";
 
-.application-list-item {
+.resource-list-item {
   margin: 0;
   margin-bottom: var(--default-spacing);
 
