--- a/packages/amplication-client/src/Resource/CreateResourceFromExcel.scss
+++ b/packages/amplication-client/src/Resource/CreateResourceFromExcel.scss
@@ -9,7 +9,7 @@ $import-image-size: 40px;
 $option-image-size: 70px;
 $divider-or-font-size: 14px;
 
-.create-app-from-excel {
+.create-resource-from-excel {
   height: 100%;
   display: flex;
   flex-direction: column;
