refactor(client): resource

--- a/packages/amplication-client/src/Resource/ResourceForm.scss
+++ b/packages/amplication-client/src/Resource/ResourceForm.scss
@@ -1,6 +1,6 @@
 @import "../style/index.scss";
 
-.application-form {
+.resource-form {
   &__header {
     @include flexFullRowWithSpacing;
     margin-bottom: var(--large-spacing);
