--- a/packages/amplication-client/src/Application/appSettings/GenerationSettingsForm.scss
+++ b/packages/amplication-client/src/Application/appSettings/GenerationSettingsForm.scss
@@ -23,7 +23,7 @@
     align-items: flex-start;
   }
   .toggle-field {
-    margin-right: var(--double-spacing);
+    margin-bottom: var(--double-spacing);
     span {
       @include regular-12();
     }
