--- a/packages/amplication-client/src/Resource/ResourceLayout.scss
+++ b/packages/amplication-client/src/Resource/ResourceLayout.scss
@@ -2,7 +2,7 @@
 
 $app-icon-spacing: 64px;
 
-.application-layout {
+.resource-layout {
   &__app-container {
     height: 100%;
     display: flex;
