--- a/packages/amplication-design-system/src/components/CircleBadge/CircleBadge.scss
+++ b/packages/amplication-design-system/src/components/CircleBadge/CircleBadge.scss
@@ -18,3 +18,33 @@
   font-family: var(--primary-font-family);
   background-color: var(--secondary-turquoise);
 }
+
+.size24 {
+  width: 24px;
+  height: 24px;
+}
+
+.size32 {
+  width: 32px;
+  height: 32px;
+}
+
+.size40 {
+  width: 40px;
+  height: 40px;
+}
+
+.size54 {
+  width: 54px;
+  height: 54px;
+}
+
+.size64 {
+  width: 64px;
+  height: 64px;
+}
+
+.size80 {
+  width: 80px;
+  height: 80px;
+}
