--- a/packages/amplication-client/src/Project/ProjectList.scss
+++ b/packages/amplication-client/src/Project/ProjectList.scss
@@ -1,5 +1,23 @@
 @import "../style/index.scss";
 
 .project-list {
-  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 0px;
+  gap: 8px;
+  width: 248px;
+  height: 656px;
+
+  .inner-tab-link {
+    width: 100%;
+    height: 28px;
+    border-radius: 4px;
+    padding: 5px 8px;
+    margin-bottom: 0;
+  }
+
+  //   &__item {
+
+  //   }
 }
