--- a/packages/amplication-client/src/Project/ProjectList.scss
+++ b/packages/amplication-client/src/Project/ProjectList.scss
@@ -12,12 +12,13 @@
   .inner-tab-link {
     width: 100%;
     height: 28px;
-    border-radius: 4px;
+    border-radius: var(--small-border-radius);
     padding: 5px 8px;
-    margin-bottom: 0;
+
+    .amp-icon {
+      font-size: var(--title1-font-size);
+    }
   }
 
-  //   &__item {
-
-  //   }
+  //   &__item {}
 }
