--- a/packages/amplication-client/src/Project/WorkspaceSelectorNew.scss
+++ b/packages/amplication-client/src/Project/WorkspaceSelectorNew.scss
@@ -21,20 +21,20 @@
     margin-left: 0;
     margin-right: var(--default-spacing);
   }
-  &:hover,
-  &--active {
-    background-color: var(--black2);
-  }
 
   &__name {
     white-space: nowrap;
     text-overflow: ellipsis;
     overflow: hidden;
+    font-size: 12px;
+    line-height: 18px;
   }
 
   &__plan {
     @include body2;
     color: var(--black60);
+    font-size: 10px;
+    line-height: 15px;
   }
 
   &__details {
@@ -42,10 +42,12 @@
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
+    font-weight: 400;
+    margin-right: auto;
   }
 }
 
-.workspaces-selector {
+.workspaces-selector-new {
   box-sizing: border-box;
   display: flex;
   flex-direction: row;
@@ -59,11 +61,9 @@
 
   &__current {
     @include workspaceItem;
-    margin-bottom: var(--default-spacing);
 
     .amp-icon {
-      margin-left: var(--default-spacing);
-      transform: rotate(90deg);
+      justify-self: flex-end;
     }
   }
 
