--- a/packages/amplication-client/src/Project/ProjectSideBar.scss
+++ b/packages/amplication-client/src/Project/ProjectSideBar.scss
@@ -4,7 +4,7 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
   padding: 16px;
   gap: 16px;
   width: 280px;
@@ -24,6 +24,13 @@
     display: flex;
     align-items: center;
     color: #a3a8b8;
+  }
+
+  &__inner {
+    height: 698px;
+    width: 248px;
+    border-top: 1px solid #2C3249;
+    border-bottom: 1px solid #2C3249;
   }
 
   &__tabs {
