--- a/packages/amplication-client/src/style/mixin.scss
+++ b/packages/amplication-client/src/style/mixin.scss
@@ -125,6 +125,12 @@ $bullet-size: 6px;
   align-items: center;
 }
 
+@mixin flexColumn {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
 @mixin flexVerticalCenter {
   display: flex;
   align-items: center;
@@ -409,4 +415,12 @@ $active-indicator-width: 4px;
   font-size: 12px;
   line-height: 18px;
   color: #f5f6fa;
+}
+
+@mixin regular-12-gray {
+  @include font-base();
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 18px;
+  color: #a3a8b8;
 }
