--- a/packages/amplication-client/src/Layout/InnerTabLink.scss
+++ b/packages/amplication-client/src/Layout/InnerTabLink.scss
@@ -12,9 +12,11 @@
   justify-content: flex-start;
   margin-bottom: var(--default-spacing-small);
   padding: var(--default-spacing-small);
-  border-radius: var(--default-border-radius);
+  border-radius: var(--small-border-radius);
+  width: 240px;
   .amp-icon {
-    margin-right: var(--default-spacing);
+    font-size: var(--title1-font-size);
+    margin-right: var(--default-spacing-small);
   }
 
   &:hover {
