--- a/packages/amplication-client/src/Project/ProjectList.scss
+++ b/packages/amplication-client/src/Project/ProjectList.scss
@@ -1,33 +1,6 @@
 @import "../style/index.scss";
 
 .project-list {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  padding: 0px;
-  gap: 8px;
-  width: 248px;
-  height: 656px;
-
-  &__items {
-    width: 248px;
-    height: auto;
-
-    .inner-tab-link {
-      width: 100%;
-      height: 24px;
-      border-radius: var(--small-border-radius);
-      padding: 5px 8px;
-      gap: 8px;
-  
-      .amp-icon {
-        font-size: var(--title1-font-size);
-        margin-right: var(--default-spacing-small);
-      }
-    }
-  }
-
-  
-
-  //   &__item {}
+  @include flexColumn;
+  margin: 16px 0;
 }
