--- a/packages/amplication-client/src/Project/AddNewProject.scss
+++ b/packages/amplication-client/src/Project/AddNewProject.scss
@@ -2,8 +2,6 @@
 
 .add-new-project {
     &__label {
-        font-size: 12px;
-        line-height: 18px;
-        font-weight: 400;
+        @include bold-12;
     }
 }
