--- a/packages/amplication-client/src/Project/ProjectSideBar.scss
+++ b/packages/amplication-client/src/Project/ProjectSideBar.scss
@@ -3,16 +3,15 @@
 .side-bar-layout {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  padding: 16px;
-  gap: 16px;
+  align-items: flex-start;
+  padding: var(--large-spacing);
+  gap: var(--large-spacing);
   width: 280px;
-  background: #15192c;
-  border: 1px solid #373d57;
-  border-radius: 8px;
+  background: var(--surface);
+  border: 1px solid var(--black10);
+  border-radius: var(--default-border-radius);
 
   &__label {
     @include regular-12-gray;
-    align-self: flex-start;
   }
 }
