fix name of component and class name

--- a/packages/amplication-client/src/Project/ProjectSideBar.scss
+++ b/packages/amplication-client/src/Project/ProjectSideBar.scss
@@ -1,6 +1,6 @@
 @import "../style/index.scss";
 
-.side-bar-layout {
+.project-sidebar {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
