(client : css) => fix generationSettings font size

--- a/packages/amplication-client/src/Resource/create-resource/CreateServiceWizardForm.scss
+++ b/packages/amplication-client/src/Resource/create-resource/CreateServiceWizardForm.scss
@@ -70,6 +70,10 @@ $max-width: 700px;
     margin-bottom: 18px;
   }
 
+  .toggle-field label .input-label-value{
+    font-size: 12px;
+  }
+
   .amp-radio-field .MuiFormControlLabel-label {
     font-size: 12px;
     font-weight: 400;
