--- a/packages/amplication-design-system/src/style/css-variables.scss
+++ b/packages/amplication-design-system/src/style/css-variables.scss
@@ -56,6 +56,8 @@
   --form-horizontal-label-width: 300px;
   --title1-font-size: 15px;
   --title2-font-size: 12px;
+  --title3-font-size: 14px;
+  --title4-font-size: 24px;
   --normal-font-size: 12px;
   --text-field-label-font-size: 10px;
   --text-field-label-horizontal-font-size: var(--normal-font-size);
