feat(client) fix props names

--- a/packages/amplication-client/src/Project/ProjectSideBar.scss
+++ b/packages/amplication-client/src/Project/ProjectSideBar.scss
@@ -5,7 +5,7 @@
   padding: var(--large-spacing);
   gap: var(--large-spacing);
   border-radius: var(--default-border-radius);
-  height: 100vh;
+  height: 100%;
 
   &__label {
     @include regular-12;
