--- a/packages/amplication-client/src/Workspaces/WorkspaceSelector.scss
+++ b/packages/amplication-client/src/Workspaces/WorkspaceSelector.scss
@@ -21,20 +21,20 @@
     margin-left: 0;
     margin-right: var(--default-spacing);
   }
-  &:hover,
-  &--active {
-    background-color: var(--black2);
-  }
 
   &__name {
     white-space: nowrap;
     text-overflow: ellipsis;
     overflow: hidden;
+    font-size: 12px;
+    line-height: 18px;
   }
 
   &__plan {
     @include body2;
     color: var(--black60);
+    font-size: 10px;
+    line-height: 15px;
   }
 
   &__details {
@@ -42,19 +42,28 @@
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
+    font-weight: 400;
+    margin-right: auto;
   }
 }
 
 .workspaces-selector {
-  margin: var(--large-spacing);
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: var(--default-spacing);
+  gap: var(--default-spacing-small);
+  height: 56px;
+  border: 1px solid #2c3249;
+  border-radius: var(--default-spacing-small);
+  width: 100%;
 
   &__current {
     @include workspaceItem;
-    margin-bottom: var(--default-spacing);
 
     .amp-icon {
-      margin-left: var(--default-spacing);
-      transform: rotate(90deg);
+      justify-self: flex-end;
     }
   }
 
